<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/doctor_appointment"
            android:icon="@drawable/doctorcircular"
            android:title="@string/doctor_appointment"/>

        <item
            android:id="@+id/doctor_calendar"
            android:icon="@drawable/doctorcalendar"
            android:title="@string/DoctorCalendar" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/doctorcircular"
            android:title="@string/doctor_appointment" />
        <item
            android:id="@+id/dimages"
            android:icon="@drawable/ic_image_black_24dp"
            android:title="3D Image" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/diagnosticcircular"
            android:visible="true"
            android:title="@string/diagnostic_center" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/medicalcircular"
            android:title="@string/medical_store" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/hospitalcircular"
            android:title="@string/find_hospital" />
        <item
            android:id="@+id/Blood_Bank"
            android:icon="@drawable/bloodbankcircular"
            android:title = "@string/Blood_Bank" />
        <item
            android:id="@+id/ambulance"
            android:icon="@drawable/ambulancecircular"
            android:title = "@string/ambulance" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/subscription"
                android:icon="@drawable/subscriptionicon"
                android:title="@string/Subscription"
                />
        </menu>
    </item>


    <item android:title="Media">
        <menu>
            <item
                android:id="@+id/crowd"
                android:icon="@drawable/crowdicon"

                android:title="@string/Crowd_Funding_Contributor" />
            <item
                android:id="@+id/Achieve"
                android:icon="@drawable/mediaicon"
                android:title="@string/media" />
            <item
                android:id="@+id/certificate"
                android:icon="@drawable/recognition"
                android:title="@string/Recognition"/>
            <item
                android:id="@+id/video"
                android:title="@string/video"
                android:icon="@drawable/videoicon"

                />


        </menu>
    </item>

    <item android:title="About Company">
        <menu>
            <item
                android:id="@+id/contactus"
                android:icon="@drawable/contacticon"
                android:title="@string/Contactus" />

            <item android:id="@+id/about"
                android:icon="@drawable/aboutusicon"
                android:title="@string/Aboutus" />

            <item android:id="@+id/reach"
                android:icon="@drawable/reachus"
                android:title="@string/Reachus" />
            <item
                android:id="@+id/history"
                android:icon="@drawable/historyicon"
                android:title="@string/History" />

        </menu>
    </item>

    <item android:title="Settings">

        <menu>
            <item
                android:id="@+id/Logout"
                android:icon="@drawable/shutdown"
                android:title="Logout"
               />
            <item
                android:id="@+id/change_password"
                android:icon="@drawable/password"
                android:title="Change Password"
                />

        </menu>
    </item>

</menu>