<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<RelativeLayout
    android:background="#1a237e"
    android:foreground="#1C00ffff"
    android:id="@+id/parent_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical">
    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#e69f7f"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"/>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="10dp"
            android:maxWidth="10dp"
            android:src="@drawable/ramaboutus"/>
        <TextView
            android:layout_below="@+id/image"
            android:id="@+id/texttt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#82ef77"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:text="@string/mr_p_ramkumar_varma"/>

        <TextView
            android:layout_below="@+id/texttt"
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#efe83f"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:text="@string/managing_director_and_ceo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text5"
            android:text="Who We Are?"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#40AACF" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text2"
            android:layout_below="@+id/text5"
            android:text="@string/content"
            android:textColor="#fff"
            android:layout_marginLeft="180dp"
            android:layout_marginRight="10dp"
            android:textSize="15dp"
            android:textStyle="normal" />

    </LinearLayout>

    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/linearLayout2"
        android:gravity="start"
        android:text="@string/content2"
        android:textAlignment="inherit"
        android:textColor="#fff"
        android:textSize="15sp" />
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@id/content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_below="@+id/content2"
            android:layout_marginTop="10dp"
            android:id="@+id/text1"
            android:paddingLeft="14dp"
            android:textColor="#9cdff7"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Our Vision    :-"/>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_below="@+id/text1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/our_vision"
            android:textAlignment="textStart"
            android:textColor="#b1facd"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/layout2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView

            android:id="@+id/text3"
            android:textColor="#8ffab8"
            android:paddingLeft="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Our Mission :-"/>


        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_below="@+id/text3"
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:textSize="15sp"
            android:textColor="#97e6f5"
            android:layout_marginLeft="10dp"
            android:text="@string/our_mission" />
    </LinearLayout>
    <TextView
        android:layout_below="@id/layout2"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text7"
        android:text="Our Team"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#f48d97"
        />
    <android.support.v4.view.ViewPager
        android:layout_below="@id/text7"
        android:id="@+id/view_pager"
        android:foregroundGravity="center"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_marginBottom="15dp"
        android:layout_height="250dp">
    </android.support.v4.view.ViewPager>

    </RelativeLayout>
</ScrollView>
